[package]
name = "votalizer"
description = "Monitor Solana validators for voting lockout violations"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
clap = "2.33.3"
criterion-stats = "0.3.0"
futures-util = "0.3.19"
itertools = "0.10.3"
log = "0.4.14"
reqwest = "0.11"
serde_json = "1.0"
solana-clap-utils = "=1.10.20"
solana-cli-config = "=1.10.20"
solana-client = "=1.10.20"
solana-logger = "=1.10.20"
solana-sdk = "=1.10.20"
solana-vote-program = "=1.10.20"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
solana-validator = "=1.10.20"
